--- a/src/app/admin/employees/employees.component.html
+++ b/src/app/admin/employees/employees.component.html
@@ -17,7 +17,7 @@
 
   <!-- Employee Table -->
   <div class="table-responsive table-container">
-    <table class="table table-striped bg-white text-dark colored-border-table">
+    <table class="colored-border-table">
       <thead class="table-primary sticky-header">
         <tr>
           <th>Emp ID</th>
