--- a/src/app/admin/admin-home/admin-home.component.css
+++ b/src/app/admin/admin-home/admin-home.component.css
@@ -1,5 +1,6 @@
 .wrapper {
-  height: 90vh;
+  height: 89vh;
+  width : 80vw;
   overflow-y: auto;
   padding: 1rem 0;
   margin-top: -60px;
@@ -15,6 +16,7 @@
 }
 
 .container {
+  width:78vw;
   padding: 2rem;
   background-color: #ffffff;
   font-family: 'Segoe UI', sans-serif;
@@ -29,7 +31,7 @@
 
 .card {
   flex: 1;
-  min-width: 250px;
+  max-width: 300px;
   background: white;
   border-radius: 16px;
   box-shadow: 0 2px 8px rgba(160, 5, 234, 0.1);
@@ -45,13 +47,13 @@
 }
 
 .card-title {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: #666;
   margin-bottom: 0.5rem;
 }
 
 .card-value {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   color: #ad20ee;
   font-weight: 600;
 }
@@ -86,8 +88,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.4);
   display: flex;
   align-items: center;
@@ -97,55 +99,58 @@
 
 .modal-content {
   background: white;
-  padding: 2rem;
-  border-radius: 14px;
-  width: 100%;
-  max-width: 500px;
+  padding: 1.5rem; 
+  border-radius: 12px; 
+  width: 100vw;
+  max-width: 480px; 
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
 }
 
 .modal-content h3 {
   margin-bottom: 1rem;
   color: #ab24ea;
+  font-size: 1.25rem; 
 }
 
 .modal-content label {
   display: block;
   margin: 0.5rem 0 0.2rem;
   font-weight: 400;
+  font-size: 0.9rem; 
 }
 
 .modal-content input {
   width: 100%;
-  padding: 0.6rem;
+  padding: 0.5rem; 
   border: 1px solid #ddd;
   border-radius: 8px;
   margin-bottom: 1rem;
-  font-size: 0.95rem;
+  font-size: 0.9rem; 
 }
 
 .modal-footer {
   display: flex;
   justify-content: flex-end;
-  gap: 1rem;
+  gap: 0.75rem; 
+}
+
+.btn-confirm,
+.btn-cancel {
+  border: none;
+  padding: 0.5rem 1rem; 
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 0.9rem; 
 }
 
 .btn-confirm {
   background-color: #b035ea;
   color: white;
-  border: none;
-  padding: 0.6rem 1.2rem;
-  border-radius: 8px;
-  cursor: pointer;
 }
 
 .btn-cancel {
   background-color: #ddd;
   color: black;
-  border: none;
-  padding: 0.6rem 1.2rem;
-  border-radius: 8px;
-  cursor: pointer;
 }
 
 .btn-confirm:hover {
@@ -155,6 +160,7 @@
 .btn-cancel:hover {
   background-color: #bbb;
 }
+
 
 .dashboard-analytics {
   display: grid;
@@ -169,11 +175,13 @@
   border-radius: 16px;
   box-shadow: 0 2px 10px rgba(160, 5, 234, 0.1);
   padding: 1.5rem;
+  height: 47vh;
+  width:36.5vw;
 }
 
 .chart-box h4 {
   color: #b53bee;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .transactions-box h4 {
