--- a/src/app/admin/admin-schemes/admin-schemes.component.css
+++ b/src/app/admin/admin-schemes/admin-schemes.component.css
@@ -1,18 +1,17 @@
-/* Container */
 .fd-schemes-container {
-  height: 75vh;
+  height: 83vh;
   width: 150vh;
   overflow-y: auto;
   padding: 24px;
   background-color: #ffffff;
   font-family: 'Segoe UI', sans-serif;
+  margin-top: -40px;
 }
 
 .fd-schemes-container::-webkit-scrollbar {
   width: 0px;
 }
 
-/* Header */
 .scheme-header {
   display: flex;
   justify-content: space-between;
@@ -40,7 +39,6 @@
   background-color: #8c04cc;
 }
 
-/* Section titles */
 .section-title {
   font-size: 20px;
   color: #5d007b;
@@ -49,7 +47,6 @@
   padding-bottom: 4px;
 }
 
-/* Scheme section styling */
 .scheme-section {
   margin-bottom: 40px;
   background: #faf5ff;
@@ -58,12 +55,10 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
 }
 
-/* Scroll wrapper */
 .scroll-wrapper {
   overflow-x: auto;
 }
 
-/* Table */
 .scheme-table {
   width: 137vh;
   border-collapse: collapse;
@@ -83,7 +78,6 @@
   font-weight: 600;
 }
 
-/* Active/Inactive status */
 .active {
   color: green;
   font-weight: bold;
@@ -93,7 +87,6 @@
   font-weight: bold;
 }
 
-/* Buttons inside table */
 .scheme-table td button {
   padding: 6px 12px;
   font-size: 13px;
@@ -104,19 +97,19 @@
   margin: 0 4px;
 }
 .edit-btn {
-  background-color: #ffc107;
-  color: black;
+  background-color: #ac15d2;
+  color: rgb(255, 255, 255);
 }
 .activate-btn {
   background-color: #28a745;
   color: white;
+  width: 84px;
 }
 .deactivate-btn {
   background-color: #dc3545;
   color: white;
 }
 
-/* Modal backdrop */
 .modal-backdrop {
   position: fixed;
   top: 0;
