--- a/src/app/admin/employees/employees.component.css
+++ b/src/app/admin/employees/employees.component.css
@@ -45,9 +45,6 @@
   font-weight: 500;
 }
 
-.colored-border-table tr:nth-child(odd) {
-  background-color: #fdf6ff;
-}
 .colored-border-table tr:nth-child(even) {
   background-color: #fdf6ff;
 }
@@ -84,4 +81,7 @@
 .modal-content .btn {
   font-size: 13px;
   padding: 6px 12px;
+}
+.d-flex{
+  margin-top:-30px;
 }
