--- a/src/app/user/deposits/deposits.component.css
+++ b/src/app/user/deposits/deposits.component.css
@@ -23,9 +23,14 @@
 }
 
 table {
-  width: 60vw;
+  width: 100%;
   border-collapse: collapse;
-  margin: 16px auto;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(137, 3, 184, 0.05);
+  margin-bottom:40px;
+
 }
 
 th, td {
@@ -37,6 +42,9 @@ th, td {
 th {
   background-color: #f2e5ff;
   color: #7c00a1;
+}
+tr:nth-child(even) {
+  background-color: #f8f4fc;
 }
 
 button {
@@ -99,8 +107,18 @@ button:hover {
 
 .btn-withdraw {
   background-color: #d9534f;
+  font-size: small;
+  margin-right: -40px;
+  height: 30px;
+  width: 70px;
+  
 }
-
+.btn-view {
+  margin-left: 30px;
+  background-color: #ad4fd9;
+  font-size: small;
+  height: 30px;
+}
 .btn-withdraw:hover {
   background-color: #c9302c;
 }
