--- a/src/app/user/payments/payments.component.css
+++ b/src/app/user/payments/payments.component.css
@@ -354,6 +354,7 @@ button {
   color:  #a205ea;
   background-color: transparent;
   transition: color 0.3s ease;
+  margin-bottom: 20px;
 }
 
 .tab:hover {
