--- a/src/app/admin/verification/verification.component.css
+++ b/src/app/admin/verification/verification.component.css
@@ -20,7 +20,7 @@
 .kyc-container {
   max-width: 100%;
   margin: 0 auto;
-  background-color: #fff9ff;
+  background-color: #fcf9ff;
   padding: 28px 32px;
   border-radius: 16px;
   box-shadow: 0 4px 10px rgba(174, 0, 255, 0.08);
