--- a/src/app/admin/admin-payments/admin-payments.component.css
+++ b/src/app/admin/admin-payments/admin-payments.component.css
@@ -88,7 +88,7 @@
 .sticky-header th {
   position: sticky;
   top: 0;
-  background-color: #f1d7ff;
+  background-color:  #e7d7f7;
   z-index: 2;
   color: #7c00a1;
   font-weight: 600;
@@ -104,7 +104,7 @@
 }
 
 .table-container tr:nth-child(even){
-  background-color: #fdf6ff;
+  background-color:#f8f4fc;
 }
 
 .colored-border-table tr:hover {
