--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: #f1d7ff;
+  background: #e8d7ff;
   display: flex;
   justify-content: center;
   align-items: center;
